<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="extensions_title">Extensions</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="default_text">Def</string>
    <string name="general_category">General</string>
    <string name="gestures_category">Gestures</string>
    <string name="music_category">Music</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="icons_category">Icons</string>
    <string name="aosp_recents_category">AOSP recents</string>
    <string name="oreo_recents_category">Oreo recents</string>
    <string name="light_category">Lights</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="recents_category">Recents</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">Notifications panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="navigation_category">Navigation</string>
    <string name="build_tweaks_summary_title">Extend your device!</string>
    <string name="system_animations">System Animations</string>
    <string name="listview">ListView</string>
    <string name="general_tweaks_title">General Tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="carrierlabel_title">Carrier Label</string>
    <string name="misc_extensions_title">Misc extensions</string>
    <string name="recents_ui_title">Recents UI</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="lockscreen_shortcuts">Lockscreen shortcuts</string>
    <string name="lockscreen_tuner_title">Lockscreen tuner</string>
    <string name="hide_lockscreen_items_title">Lockscreen items</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="notifications_title">Notifications</string>
    <string name="smart_pixels_warning_text">Smart pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see a significant improvement in battery life. For a good user experience, we recommend you set the amount of disabled pixels at 75 percent.</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="buttons_title">Buttons</string>
    <string name="app_ops_category">App Ops</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, post in the Bug Reports section of our Google+ page. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="accent_picker_dialog_title">Select an accent color</string>
    <string name="theme_accent_picker_title">Accent color</string>
    <string name="theme_accent_picker_summary">Select system theme accent color</string>
    <string name="theme_accent_picker_default">Default</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_restart_recovery">Advanced restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_users">Users</string>
    <string name="powermenu_logout">Logout</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double-tap on lockscreen to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_up">Uplink</string>
    <string name="show_network_traffic_down">Downlink</string>
    <string name="show_network_traffic_all">Uplink and Downlink</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="headsup_category">HeadsUp Settings</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="heads_up_notifications_summary">Customise heads up notifications settings</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable all heads up notifications when using these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volume_category">Volume Rocker</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
    <string name="cursor_section_header">Cursor</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="volume_key_cursor_control_off">Disabled</string>
    <string name="volume_key_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volume_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_answer_call_title">Volume keys answer</string>
    <string name="volume_answer_call_summary">Answer the call when volume keys pressed</string>
    <string name="torch_long_press_power_gesture_title">Screen off power button torch</string>
    <string name="torch_long_press_power_gesture_desc">Long press power button while the screen is off to turn on the flashlight</string>
    <string name="torch_long_press_power_timeout_title">Automatically turn torch off</string>
    <string name="torch_long_press_power_timeout_never">Never</string>
    <string name="torch_long_press_power_timeout_1min">1 minute</string>
    <string name="torch_long_press_power_timeout_2min">2 minutes</string>
    <string name="torch_long_press_power_timeout_5min">5 minutes</string>
    <string name="torch_long_press_power_timeout_10min">10 minutes</string>
    <string name="battery_light_settings">Battery charging LED light</string>
    <string name="battery_charging_light_summary">Customise the battery charging LED light</string>
    <string name="battery_light_enable">Battery light</string>
    <string name="battery_light_enabled_summary">Enable it to show the respective colors of the battery LED</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_allow_on_dnd_summary">Enable it to show the battery LED light while the device is in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_low_blinking_summary">Blink the battery LED light on low battery</string>
</resources>