<!--
     Copyright (C) 2018 AospExtended ROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/extensions_title">

<Preference
    android:key="status_bar_category"
    android:icon="@drawable/ic_status_bar_category"
    android:title="@string/status_bar_category"
    android:fragment="org.aospextended.extensions.categories.StatusBar"/>

<Preference
    android:key="notifications_panel_category"
    android:icon="@drawable/ic_notifications_panel_category"
    android:title="@string/notifications_panel_category"
    android:fragment="org.aospextended.extensions.categories.NotificationsPanel"/>

<Preference
    android:key="navigation_category"
    android:icon="@drawable/ic_navigation_category"
    android:title="@string/navigation_category"
    android:fragment="org.aospextended.extensions.categories.Navigation"/>

<Preference
    android:key="recents_category"
    android:icon="@drawable/ic_recents_category"
    android:title="@string/recents_category"
    android:fragment="org.aospextended.extensions.categories.Recents"/>

<Preference
    android:key="lockscreen_category"
    android:icon="@drawable/ic_lockscreen_category"
    android:title="@string/lockscreen_category"
    android:fragment="org.aospextended.extensions.categories.Lockscreen"/>

<Preference
    android:key="system_category"
    android:icon="@drawable/ic_system_category"
    android:title="@string/system_category"
    android:fragment="org.aospextended.extensions.categories.System"/>

</PreferenceScreen>
